# Tech_test

./: README.md
Iriurisk_test/: .env_file  Dockerfile  README.md  pyproject.toml
Iriurisk_test/iriurisk_test/: app_config.py  app_logging.py  main.py  prompts.py
Iriurisk_test/iriurisk_test/api/routes/: chat_route.py  health_check.py
Iriurisk_test/iriurisk_test/application/: chat_logic.py
Iriurisk_test/iriurisk_test/clients/: gpt_client.py
ui/: .env_file  Dockerfile  docker-compose.yaml  pyproject.toml
ui/ui/: main.py
